blueprint/frontend/src/drawing.css
.board {
  width: 100%;
  height: 100%;
  /* border: 1px solid black; */
  /* background-color: aliceblue; */
  /* background-color: transparent; */
  /* background: transparent; */
  /* position: absolute; */
  /* opacity: 0; */
}

.container {
  width: 900px;
  height: 600px;
  /* width: 100%;
  height: 100%; */
  position: relative;
  margin: 30px;
}

.box {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0.7;
}

.overlay {
  z-index: 9;
  /* margin: 30px; */
  background: transparent;
}

